# investigathon-bioinformatica

./: .gitignore  README.md  eda.py  loader.py  pyproject.toml
.cursor/rules/: code_practices.mdc
